--- a/management-system/src/main/resources/templates/create_teacher.html
+++ b/management-system/src/main/resources/templates/create_teacher.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
-		<title>Student Management System</title>
+		<title th:text="${section}"></title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
@@ -10,7 +10,7 @@
 	<body>
 	
 		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		  <a class="navbar-brand" href="#"> Student Management System </a>
+		  <span class="navbar-brand" th:text="${section}"></span>
 		
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 		    <span class="navbar-toggler-icon"></span>
@@ -21,6 +21,9 @@
 		      <li class="nav-item">
 		        <a class="nav-link" th:href="@{/students}"> Student Management </a>
 		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" th:href="@{/teachers}"> Teacher Management </a>
+		      </li> 
 		    </ul>
 		  </div>
 		</nav>
@@ -29,24 +32,27 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-					<h1 class="text-center"> Create New Student </h1>
+					<h1 class="text-center"> Create New Teacher </h1>
 					<div class="card-body">
 						
-						<form th:action="@{/students}" th:object="${student}" method="POST" >
+						<form th:action="@{/teachers}" th:object="${teacher}" method="POST" >
 							<div class="form-group">
 								<label for="firstName"> First Name </label>
-								<input type="text" name="firstName" th:field="*{firstName}" class="form-control" placeholder="Enter student first name" />
+								<input type="text" name="firstName" th:field="*{firstName}" class="form-control" placeholder="Enter teacher first name" />
 								
 								<label for="lastName"> Last Name </label>
-								<input type="text" name="lastName" th:field="*{lastName}" class="form-control" placeholder="Enter student last name" />
+								<input type="text" name="lastName" th:field="*{lastName}" class="form-control" placeholder="Enter teacher last name" />
 								
 								<label for="email"> Email </label>
-								<input type="text" name="email" th:field="*{email}" class="form-control" placeholder="Enter student email" />
+								<input type="text" name="email" th:field="*{email}" class="form-control" placeholder="Enter teacher email" />
+								
+								<label for="department"> Department </label>
+								<input type="text" name="email" th:field="*{department}" class="form-control" placeholder="Enter department" />
 							</div>
 							
 							<div class="box-footer">
 								<button type="submit" class="btn btn-success"> Submit </button>
-								<a th:href="@{/students}" class="btn btn-secondary"> Back </a>
+								<a th:href="@{/teachers}" class="btn btn-secondary"> Back </a>
 							</div>
 						</form>
 						
