--- a/management-system/src/main/resources/templates/teachers.html
+++ b/management-system/src/main/resources/templates/teachers.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
-		<title>Student Management System</title>
+		<title th:text="${section}"></title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
@@ -21,9 +21,9 @@
 		      <li class="nav-item">
 		        <a class="nav-link" th:href="@{/students}"> Student Management </a>
 		      </li>
-		      <!-- <li class="nav-item">
-		        <a class="nav-link" th:href="@{/students}"> Teacher Management </a>
-		      </li> -->
+		      <li class="nav-item">
+		        <a class="nav-link" th:href="@{/teachers}"> Teacher Management </a>
+		      </li> 
 		    </ul>
 		  </div>
 		</nav>
@@ -32,10 +32,10 @@
 		
 		<div class="d-flex justify-content-around">
 			<div class="p-2">
-				<h1> Students List </h1>
+				<h1> Teachers List </h1>
 			</div>
 			<div class="p-2">
-				<a th:href="@{/students/new}" class="btn btn-primary btn-sm mb-0 mt-3"> Add Student </a>
+				<a th:href="@{/teachers/new}" class="btn btn-primary btn-sm mb-0 mt-3"> Add Teacher </a>
 			</div>
 		</div>
 			
@@ -47,20 +47,22 @@
 						<th> First Name </th>
 						<th> Last Name </th>
 						<th> Email </th>
+						<th> Department </th>
 						<th> Actions </th>
 					</tr>
 				</thead>
 				
 				<tbody>
-					<tr th:each="student: ${students}">
-						<td th:text="${student.firstName}"></td>
-						<td th:text="${student.lastName}"></td>
-						<td th:text="${student.email}"></td>
+					<tr th:each="teacher: ${teachers}">
+						<td th:text="${teacher.firstName}"></td>
+						<td th:text="${teacher.lastName}"></td>
+						<td th:text="${teacher.email}"></td>
+						<td th:text="${teacher.department}"></td>
 						<td>
-							<a type="button" th:href = "@{/students/edit/{id}(id=${student.id})}"
+							<a type="button" th:href = "@{/teachers/edit/{id} (id=${ teacher.id } )}"
 								class="btn btn-outline-secondary btn-sm mb-1"> Modify </a>
 								
-							<a type="button" th:href = "@{/students/{id}( id=${ student.id } )}"
+							<a type="button" th:href = "@{/teachers/{id} ( id=${ teacher.id } )}"
 								class="btn btn-outline-danger btn-sm mb-1"> Remove </a>
 						</td>
 					</tr>
